@@ -8,6 +8,6 @@ KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh
 LICENSE=|| ( GPL-3 BSD-2 )
 RDEPEND=>=app-misc/editor-wrapper-3 >=sys-libs/ncurses-5.2 pcre? ( dev-libs/libpcre )
 SLOT=0
-SRC_URI=http://www.greenwoodsoftware.com/less/less-474.tar.gz http://www-zeuthen.desy.de/~friebel/unix/less/code2color -> code2color-0.2
+SRC_URI=http://www.greenwoodsoftware.com/less/less-476.tar.gz http://www-zeuthen.desy.de/~friebel/unix/less/code2color -> code2color-0.2
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
-_md5_=030f89a7cc86a11dc3c28d54cf367bf6
+_md5_=3f6b703b8fae0174cf74615be6f31970
