@@ -1,13 +1,0 @@
-DEFINED_PHASES=compile configure install postinst postrm prepare setup test
-DEPEND=python? ( dev-lang/python ) sys-kernel/linux-headers python? ( >=dev-lang/swig-2 ) !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4
-DESCRIPTION=POSIX 1003.1e capabilities
-EAPI=4
-HOMEPAGE=http://people.redhat.com/sgrubb/libcap-ng/
-IUSE=python static-libs
-KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86
-LICENSE=LGPL-2.1
-RDEPEND=python? ( dev-lang/python )
-SLOT=0
-SRC_URI=http://people.redhat.com/sgrubb/libcap-ng/libcap-ng-0.7.1.tar.gz
-_eclasses_=autotools	999c8f6cf5d91495cb0779588f20716c	eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	5d5921a298e95441da2f85be419894c0	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python	3a270b7b1d1e679847ff0faeac25c5a3	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
-_md5_=bf28847f33332bb43ed4a74242502411
