@@ -7,27 +7,27 @@ AUX less.envd 47 SHA256 961d6e87eeb2b41d163def66718ee78d4b7c778dbe91b24c6764635b
 AUX lesspipe.sh 7565 SHA256 0ac364c3f4273e81e2a4ad7922a5d51821d39db8848595709ec5e1770cb2652f SHA512 f3f206c3ba269f2cb594c2be600c084683c410066d1496ea09945d89916e5450ae1743aa159ed7f01212b500f618fbfeb82817b8a1697e147205c008b09d0edf WHIRLPOOL 09b4ab2034cce70f85c9f5258185135da4bc5b18c0c42e07b1aa66d72e4ae68aaf3bd741c3aa64344bd876d33f121a27762851442a9eb3319add6dd699850f09
 DIST code2color-0.2 200711 SHA256 2365c9009b1cc3c30430b88775ec402164df105fd12364871d05dcaed20be954 SHA512 c0ab9f411d5a106c81334343e3c4a63b67d27b95e2d128145e3ac1ee46cd6c228c61796cf96e51826e69b3e465e7bdaa81b1a48cad934c23b310f2ea2ebd8e75 WHIRLPOOL d0207e84a5849c554b1dfc5882ab46d8afc411c7d26e912235ec05565880e6ed0db8449133502234a01ae8f59feae211486b6a523e37859d8404f72fff9b8f93
 DIST less-458.tar.gz 311224 SHA256 e536c7819ede54b3d487f0ffc4c14b3620bed83734d92a81e89f62346db0fcac SHA512 09f4cbd9b7f7969b80dc630d7ec74634ccc19b714b6eef2d9547a1455816ea0d5891cd23f31bd204f41bc4f6c21c721eb35340a259ac20027a444ff549a6f065 WHIRLPOOL b3cdbd5df5d6b36ef40a1b9f6d2a0d9021e544616201fff4ae8cd7dd8b6875f6aae01f08223169e42275ec2c6dcd2d4aa0d47a251b482b9a9913294e471aebe3
-DIST less-474.tar.gz 316263 SHA256 407428e65e14ec449921dc91e595f6526dcaf28469182fcd517cb5523f15ee59 SHA512 e08cb996c0a9d9e341893fef8ddd147764aa2524ad5914dc88a8bbed1994912937b9119f8cc227712e98e2d2623d8b6ee6ecd73a6d5bc60c3c4ff85bcc540237 WHIRLPOOL 0b7816d6020fa1ece94b9c25ea236069576ed5f1657943618610c60220075b35e9abd5275ed785159c6a1de6a8b8ec6ba89e83e39399f7a37c9f387cbe79bab1
 DIST less-475.tar.gz 316345 SHA256 0207e65185c733171e8307b40d46e7fdd0e584928a3cc4f92fff7d682008edf0 SHA512 01c5cbd1de356dc0e06fe6495621510de02db63231b2519cdef2b42494bec362794bba1279de78e17fbeca148a3f14a48eead355283f57769a86d1512f685cc6 WHIRLPOOL 247a518c129f83d47e2a7d3e8ae60bd71474ff8a7d4803dedbae8483c483b41294e8c8a9400ffa4907692c6b8f01af7ad95b0c0d01804abe49fffae712dcffee
+DIST less-476.tar.gz 316352 SHA256 99245fa2945666273056a8f9b54ef096f93ab0ba42dcc918f1d0ad4978629f95 SHA512 7082bbd47520292a5e57e86381e1636c25e7f590dd2949ac5581b5013f5998b9dc0ab54f76ba6a0817a7e3fef22f7e67b095da2033de08b8346b30171490e5ad WHIRLPOOL 6f3cb0803c7691e5cad5b8bc48b711910d05f16d0d831fbea3a65091c7fc5499c59cec37d0ac063722b151ef0bfaab3e4445e64726da6af01317b31c97bb22b8
 EBUILD less-458.ebuild 1711 SHA256 8d78e031924c5a18bb614294632d9be20d72c7fc839503ef39bba6e56ccbaebe SHA512 174454856706d377012d335b5f333f526d59dbabe7fca31eb794db29091d60838f71a59d76c8b996272b4dcab87a33923785ad3ab8946a0d371729eef9f47cf4 WHIRLPOOL 7e30819d9e50b9efc4ae229f4df163211e163e25e67fdaec6412a5ee625a2696cf7fa2c59cd1da4dcf73fd2c59203f9d99250c7a2aade3a07510aff81e7a3dd2
-EBUILD less-474.ebuild 1758 SHA256 2708b89f09770f4a5d5b7e9ad8e5ee4a1cb508f21ec4f9137a1a23522f72fe20 SHA512 452f13d850c426c53e7987f04c1680b4d492b8183effe862bc6045d86b8cc2b827bb07f5d2c6c8528a1e307af43e7b79f0545f8a391d8670fd5eaa10c14b111e WHIRLPOOL fd3a2276f541e54d098edc01d22bcdd94ca6ad6b1157a9ace019f567375cfdea0ceaf6b1140ca4ec1c137a0f18bc4230c45ca43b35eef349941065d73c17d18f
 EBUILD less-475.ebuild 1758 SHA256 e246a71add1269ac268548be7fcfe16ec3f9cf8edfd274ad8c506a98e1b43b33 SHA512 af1a2e9b0bb71f7a2051b75736811e6092bc592c3fd300f7b3ff31547ad2fa49997136f4d687b4e6682ba2eb2a953a80ae14d2af902d41328d15bc71652e5780 WHIRLPOOL 3f4a2de7c4b28b3883c15a55158c149c9367bf792df9df3bc27973cce8d8b165f31416eec9f14be9194ecb849609d1998ed86572d3a0e807d722dfc12d72fc66
-MISC ChangeLog 22520 SHA256 6a0d0f04154e321efe23571566b7f72359fd2b330f4293248344fa9e6563c03a SHA512 03c33198f4c23b423adfc6ebaf2175120f12b5437218e65a502942b660102dffd3a1e29154edac005adde8521f50b291f86035edf10d1c3022cef7c475460c9c WHIRLPOOL a44cad4a7725962cee09e89a001819958bb5216af68e37a2f12abf6f97152f2e70aba5a598253c5987110aeea369fba140ddea5668a504d5034405b11c3c4da5
+EBUILD less-476.ebuild 1758 SHA256 adbfc90a063bc8b3b9b694f8315c37015582cd20079d206f511059c44a873209 SHA512 28e1caee26a8344981bcbc1c900ed5bf0ed10e70c7d9b8df8f9d6b4e7f9a7f52ecd22ae46b72358a30fa03d468f8d48aae89a06c6900925ca41929544e7cee7c WHIRLPOOL 986ed83308349431cd25d6667bb22ec1c1507f4242a82b0940c2f86c655fb1b87cce9f4a706bb5189e3c246f4d2516cf3078ef1a40ef6f26197fc7afb40939ac
+MISC ChangeLog 22667 SHA256 cd4506489d432b52e2b7bd5c424dea4a9a8be8c9c1cfe031aa21eb87d46acd3d SHA512 dbe665014421bda6641d65c1ce297f6aa5caaa6daefbe15377d419854ded0ae6645b2a9aea0030f221d533912eac0b38272018561279248d053aca9b5f9ab488 WHIRLPOOL 17d72fe88f3b9978d24f5b79909b7895c7ce3e7469ef3b545386634fae3ac969003392d078dcec49477c02fd02bd3357c2028054e656680299914a399fac2582
 MISC metadata.xml 164 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 SHA512 8eb0d5153d388f6ea069c64b93882244816a0a09aecc0d73cb872121ce0eb24c5ccafa96aad0b620b2300f319e1af101fa7fa6c5d0d561719d49bb07da0a2eca WHIRLPOOL 11a1441bddb7a6c69653c663902b7da5767ae6ad515ac2aabfc42fe37927a1ccc21472deeee454009ff720201a41c3e4a912df42661a0a87150fb46126da2d52
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJU/sQUAAoJEPiazRVxLXTF3hgP/1fcOPgFIgGtXN9IkYnMb7KX
-LM+EPFbCDjC2iy/o7L3ukE9VK7bNjuH7Hu2ZocjQ/tZ+pzoZdmxHTFSHnfwEUWX5
-q4/dVjaLaRxcV9t+sl8otiECvMChXovTfCf0qDqQm8IDoH4Lpdvbe8gbOFAg94fv
-LHDzMbykpLfly6S+pjPoB9ddAoy8UX/Hiw+SxcVFMUVj20lwVVOebTVHU6jFz3Ko
-QAbCzVpYZ9g4TH34HLvNICQEN6rWz+GRhnYL4FMtF5XI+ycgPQ3kQs9IeP/bNbBg
-SG9smdXJevsfgN72+LLHnh0FE++GyefxwU9+WOY4P6Q2gKtzvjklg8+XfATPPH0v
-yikjtnY6SjmKSsx5Vrh++GPouI8Dg50mKMnZinixHiF7/g51k5I9DhZTOxk4fo93
-+b/tk2t+xwoVwvb/4Fr6+TU7YGeQYK50mlIHwV3MNvAuCKGX6pB4ToY2qi6cD4Bf
-CDHwU8AJx1IStk2cUs3Jq3K7ElUy+kMDH5fLqpwPEUoTT53VXDUUMSZ3dy/olCxI
-hVxXe3nn53ZwlpgJfq6QONXiJfLc+tkcdpBvEDb/n9IstlHQ2mz2k2eqmnpPr00V
-/gbuEVwKTOZWfzEaA+ZBVhfl0bKT9RtQbDgAHoFyagQ0sm8aDPsvnAtqJZuqM8tc
-07x+LxHafcmTH34RET3G
-=cbKr
+iQIcBAEBCAAGBQJVUHvyAAoJEPiazRVxLXTFpvkQAL3Xoryn3lw3oL9tQX21cQ9f
+OOgUSIf8bHJDIz8ASbv6++x8DeWmX+o9uuD/aX+i+ZOpRDAIH8Q52LkkzcuMoI/r
+/5JfE74ZkkVJorbPSJXFI4iMtCqnSsRZvHikmuKhUV1AMaKMr8FAplgYSoWSofzX
+u/tm2PYYUuwKvOMWuPCE/lO45Tkxqis5sfM9TwQCLxXZ5kJRja+4NGOFLUW0PmOV
+skNj5yUVKReSu8NKB9AU4QsAWfObfvwNzu4RuYV2ikLQr4B8tVmmL+yeFUHAI6wM
+MidbEK9I9P7DlqVQ9pQSWVU2zprZT7j6ch0U9PwAK+AC0I0qKCEzHu/4NjtsEtKb
+iZe6jCM/DKvgANQ9F3EYt/rVBC4ZBWKhYDTOZ2hVomxUkpi1PFDWYe5/eobZ8r7d
+HSMjWFCXXPgMW8Tt+KZGfE2zP19X4GQv5+MU9btpumO8AbqQSQRxGD3hnADOc8Br
+ZbsNVC/6wMSAQHqpqxzLl/U1NDzueEtSryLtfBLGzJx/dDKsxkWu8n9rciVmljJw
+VTnHX7bZLopQGRrux2m2lOTFF7EBhdR4gI6rg4Q0ncGoS7BIuJRv/FkDFt1eZRoT
+kCkAsne4/nRsvgt1SQrvEvEHKoo0iI2Lq7LNZEWViO+ol+/2RExVLJBDhCpmB5kW
+yPQ7Yw7/mLrEdzn3RrSj
+=MQ+b
 -----END PGP SIGNATURE-----
