@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/less/less-474.ebuild,v 1.1 2015/02/07 08:32:42 polynomial-c Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/less/less-476.ebuild,v 1.1 2015/05/11 09:52:49 polynomial-c Exp $
 
 EAPI="4"
 
