@@ -2,29 +2,29 @@
 Hash: SHA256
 
 DIST libcap-ng-0.6.6.tar.gz 367231 SHA256 89589a29a6b19068edd650dd4f626c10e84bfe63eacae7b1fd1f98f3ac8ea00d SHA512 383aaa9e315e2498c779a17bef35df6aee072c42598d07d92bdd7a2328a3bcd22d5ec46d600babc467aa4d1b01e9dd660493dafba3b06c7ac81f35df9d4d6e3e WHIRLPOOL c1a72480d545b45ae385065449098f0878f8c8d138f1d9bd9b3445d1146fd6a227bb9b0ac0148542995c5b6683c7c5998d0cd61a369b9f5c84fb39a9dc5cf8a3
-DIST libcap-ng-0.7.1.tar.gz 390354 SHA256 bf74455c9540667a924d2983090c4eb7285f0a4a82a25becd0a496e8bbf3d8ff SHA512 d7252a34bc1edc30224f46c8a99f125189c8fcd874d721d0cb4b52509dbd980b55f114e71625980615f379bdd7783e98ab123ebc89ae1b6dc274da2d3061e7d4 WHIRLPOOL 04f2ce162f0668b00b79ab0cdd0d5022dff4beb725b52af33e9276744bbf0273e7a15457740dc46f911ad9fdf2393f5ffe34e75054ec453a47afad87bf49ecdb
 DIST libcap-ng-0.7.3.tar.gz 392613 SHA256 5ca441c8d3a1e4cfe8a8151907977662679457311ccaa7eaac91447c33a35bb1 SHA512 f03a35c54b5998ef2e712540caa1f4ade37f9abe60992a1e727142b26815a4b8a7ce86ea94466fe692e4798c7297e5e1bbd338e5afe05689905ee9e0c0f16ef2 WHIRLPOOL 7752a70ea348dfc52537f67d5dccab03d598a112a7263a8811987453b53cda58643e938b4651c5cd8d0ea02f20fddc10bff2ac8bc23f68f97c9ab8c5791429ab
 DIST libcap-ng-0.7.4.tar.gz 407007 SHA256 48a2083276f9820cb92dcb05d001b30733bcbf48c14c230303cac3cd08b45b6b SHA512 443b92f44cffd4b436a2651eb3539c560382102d918faf63f993d3b6627c03e80f7b4a5105ddb040890ef82122a42ca6881795ab0639de337f693705f5506cf0 WHIRLPOOL 3d62f26fad8c9e7756374022982a4f2fcdde5af5532474dfa7eb6ba1bc7f97984691bdda8975ef32423b8e86af2462ef672ba3175a3121a484c46096cc8f10b2
+DIST libcap-ng-0.7.5.tar.gz 409426 SHA256 7ba01e73c027e4f17bff6cdd77c01b25987e58ed14e422a437e14df6e2dbca31 SHA512 947ec84037c6c383e47d7e15168058b01a0a6eddf73c94cea7e1d4c8b27af1d646b483abdf14d3aa8ecb35fda2ead803f8596aed023a7e5ff9396690313c24a1 WHIRLPOOL 8dc79529034f5ad2c4c8cc514157adfd9097b902647240134be82bd2bc2eb590adadb74c71f4324788702a0694d612ab0f5bdb9c0ddfc688407505ad23a39132
 EBUILD libcap-ng-0.6.6.ebuild 2515 SHA256 34967b49aaab191ccd019a7d057b533665f227cb4e9657b91cd3c9e63ec9c2b2 SHA512 af0d89bb0a7a5b422668cd2cba3ad87deca3b559be2b0d552c82d37b99c289eee2d1270a7813fb6f0f00f8fd52395f3f4704e482cc93d462238e063706efab8b WHIRLPOOL 2614cb420195b3a1924722b95230e8bcfc0bac379ebfc544d90a0dda3a4e899ddab0598b556afddfeb06eaf8729631f1a02112adc3497aebe381332ec3c760a0
-EBUILD libcap-ng-0.7.1.ebuild 2456 SHA256 7a8e2161e89bc0472c21cfc95613b96231dac52af1ceb5b0aa2d8abf9aee5781 SHA512 1e4a7fd37d5790ee2a3ae7093075871ca873795c4ed0ae5764010fc1e11b04d48c84bfb8821ab082dd66d00240dc9ec99f8b84c12093541638d065b9d1115ce5 WHIRLPOOL 7b34d6a19daee4b13de39c820ba2b92129fe9b1c5e000032eee8a034dca8a8bad0c4ec64cf2901fca33c6cfacf1c6858d4ef56848f579d9518d71fa470895a44
 EBUILD libcap-ng-0.7.3.ebuild 2544 SHA256 97da6bcf610be3a52d54a7eab1be25ab62b5b474d7af483cffd66f6daa8bf020 SHA512 1cd200527ff4c548c705674df9a5903d15cfff42a82cad3160f6776c587dfafb77b875096cfc391b845bbc49ca63c0001c917af9d009b1a5ff8f76be5499ead3 WHIRLPOOL 954d4a5cdd4c06b28c631eb44f8b71c04b79878eb78e471a93694c6347321e16fe3f6c99b512b90fe3f9cad569190abcf0fdd34d06ad71d81bdab0eeaf1f4bd2
 EBUILD libcap-ng-0.7.4.ebuild 2099 SHA256 34ec6acbd9c621d0fb536bcb2b16e3a1402d0cebbceda4abed32849762401d0e SHA512 8dc48ce30a61ab7ec2b5321384e9a885e417319f6564d998e6ee6d7e9ff670fe9a39c440faa63834894dcf556b2d78e301aaddc14f7a0f96ec0dc7fe431cce5f WHIRLPOOL f3cecb8d3da6cd23b9e6a9bed31ebef471c47b50c2c310fd3c1f8adcf4ef6416748683d3adaa15bf673f19e45b53f7b0609fcfd04144ac8496e31397f409cbe9
-MISC ChangeLog 9573 SHA256 55447d24e707d2b84a4d03c3aba9374e8e4f72f4061ba932c529a72c234580df SHA512 be8a2045f9a850b6f6c9c679d434fa352c6e5ca483696b19c080fa7f6de6b376f7f6fa72b7270212d55921e6f27defce09cba062940e1a86d76134b08c94957f WHIRLPOOL a711821acbfa1baefa1403730b6248e9f5c5744404a05ce41bdda0b18323217acce8e78027b44c372ae6e9e72886bc4f48edc054ffa8661ed36948e275d6c3d2
+EBUILD libcap-ng-0.7.5.ebuild 2115 SHA256 21396e69b7f60100717b405eea798e9395663f0fbcd0a5f196638cce9895d3ab SHA512 314856ed6949380b9dfbe5268eb90280d20642532f61df8d234fd71b750888e42c1d80f5300633c150c011fd30f4e110de3b245693cddd418e786f184e4f1a48 WHIRLPOOL f3517e433e7619093b649eaad3caed2374eed7834727526a00df8949d51f2abf14f9b360286858fe92454d022b5d041d6a064dc33daa6f4ed21c2d251d5e7ed1
+MISC ChangeLog 9750 SHA256 030021e1043d277c5bde0260492b3f653db45f72ed911e99addec836f4fbd8f7 SHA512 10411a31796b38dfdf4680e8334566901dc4c2ba98168dc296c0e47c63bd5cc9d5f66f9cceb4c459c4a8a4fcb99eb5443e08f1fae116085260ed119818fbc3b7 WHIRLPOOL a96fe4000a441be7be5f20b8c80241ecd423fcba015084c70c993b3472523ab1bb49754a8c0ae48abf623e8d09fa83194ce4a699cff969988e8fbc8e658c4006
 MISC metadata.xml 501 SHA256 2ba6118979e987255eff0de2453eff6e9a76d4e2ffa04e3acbe1bc92fda0a171 SHA512 f974d0009e90640257cab704897db67cc736663313d026ba2092a6aaae004973416e1f649c9d7a0373b1f58d49db8103217e85803faa8c37a7830c9057f2c5e8 WHIRLPOOL 38c2e18fffda49e0b81e47bce317af92b0e992d1371c79e2e8bed04ea69e704902e005af8693735f7bf1fbf8d1cda5bea6ec9e0c20886018103914d11a95ec30
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUgzGRAAoJELp701BxlEWfIm8QAIuwDbdO5tXrTfqlFGmK0NmA
-M3vqIMGw0Cm6GuAqpzyR4zITyWLI7G2vWLmVgGtVjfVry3Xjkn+e+prgBhxNrNqi
-BuFb3i1YwiJEBKmN7vZMtP4UlveYC9bTiW/QQ7NFWeuhfR4kQY+7HXApWxvkeCPt
-54LpzYbGIldiK/MP7C6belAl5ANTpOBH1sJisAhjGaX5QIZgti9HjvOuFr6+jlww
-ZFPwvEBYmp/25YY7XVveJhG0QPzOgqQowmByLCfwbk5IkyCCLV5fiXDOowK8PDpR
-qlp+waOrj7eVKbxOXeS9+I5I984fBbpybfLfjJINEblEqTp9fibSWmaPSISMoijm
-DqfdiJdO5/G9pbgDx0WFhSkpne0mrsyYKC3Ka7ZkTX/tkrTa/QA1pnmOZUk/hVWf
-meVWrCP4FLkjYFJDQi2/wfCk6ubn+OQfMpVEXn3pZApkJnkh8HF+jmXiM3FyFHP0
-eqJcLu3Otp68ea2drEEQTH0Z7dsRbNQEJzN2OfxfQu8PEmUF0ybNpK/++pKH46nq
-l7NHtD7mESE1iecyAMCiUlZBCts++Os/Poso7s0GRDyHkxJcQg89yNkmgWjNifW9
-iVELu/AQPMYGQKEP5E/plhyonCii8jkHPJfrCHurXbji1XBT7GAl0Fp44/vwPIz2
-GVFLv413aPV/64MImb7z
-=ffhc
+iQIcBAEBCAAGBQJVUH26AAoJEPiazRVxLXTF1yYP/jrVW7Ukwusr969/VUMsPbog
+kW1AOazmRc1z2A5Y7tmLklEeO6TVVdLWUD1z2ng4G6z0P5287uhonNisU9IA4sR4
+LoZ3/tKL5yeqQUeKfSSI8XxVIfQdsC1dMNZIpiMz1A0rSokVU2WRqHnxoSdhKhsa
+BZV6zSGKPd208bXmZORCNQYJkVdcuFjfwO5PiMaWWJniik1DOKvqAu/j18Z4PJGB
+tvQyL5jrm5I+oL+JuoVbyJTBNvJZEG1/jywi+vuMl8DWfmzvLZ4Ry+2H2SsklxLj
+aYl7zZIoLi5jXlY+Wgc03rI9Niw/Lqf5gI1UMqKnjW1u15D2Qpd7U4Tg13PtsY16
+UOIVlBlWnC/V8lH2wSj5Seb9R3BuQvCO/jqykNrC9gfCEzBQItet4fLjEMSaLT6E
+cZd3tSiBOTBkN/IRM63KWrO3PFHLG7n3Y9eKJYOo8zhzAahcuBJfbkWn1urr/xXS
+OPc642eP3YpGpEEX2DsAqMTJTFsLNA017oJ35Q/Mr0Pyge9FDvisHe1aUiCNl+IM
+Ka6gyNCqFe8QL417EQVhbE11IkPKSPKXjPD0eWMm25TXobnkVbfnZk2xHBV63FKE
+wGw8Vv8EK/2HyiyPdj4o2Ih2bwQySPODSsEIcM+aZ6E22CYcUeJj35KD/v7XNF4k
+DO843TDT2pnSxKhy8ZPI
+=Lj1w
 -----END PGP SIGNATURE-----
