@@ -1,6 +1,12 @@
 # ChangeLog for sys-libs/libcap-ng
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/libcap-ng/ChangeLog,v 1.76 2014/12/06 16:40:48 ago Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/libcap-ng/ChangeLog,v 1.77 2015/05/11 10:00:25 polynomial-c Exp $
+
+*libcap-ng-0.7.5 (11 May 2015)
+
+  11 May 2015; Lars Wendler <polynomial-c@gentoo.org> -libcap-ng-0.7.1.ebuild,
+  +libcap-ng-0.7.5.ebuild:
+  Version bump. Removed old.
 
   06 Dec 2014; Agostino Sarubbo <ago@gentoo.org> libcap-ng-0.7.4.ebuild:
   Stable for ia64, wrt bug #529542
