@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/less
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/less/ChangeLog,v 1.193 2015/03/10 10:14:43 polynomial-c Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/less/ChangeLog,v 1.194 2015/05/11 09:52:49 polynomial-c Exp $
+
+*less-476 (11 May 2015)
+
+  11 May 2015; Lars Wendler <polynomial-c@gentoo.org> -less-474.ebuild,
+  +less-476.ebuild:
+  Version bump. Removed old.
 
 *less-475 (10 Mar 2015)
 
